--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 // OK
   function API_callback(method, result, data) {
     if (method === "showAd") {
-      //unityInstance.SendMessage('AdsManager', 'CloseLoading');
+      unityInstance.SendMessage('AdsManager', 'CloseLoading');
       if (data === "ad_shown") {
         unityInstance.SendMessage('AdsManager', 'AdShowed');
       } else if (data === "no_ads" || data === "call_limit") {
@@ -147,14 +147,14 @@
       if (data === "ready") {
         FAPI.UI.showLoadedAd();
       } else if (data === "empty" || data === "call_limit" || data === "disabled" || data === "no_ads") {
-        //unityInstance.SendMessage('AdsManager', 'CloseLoading');
+        unityInstance.SendMessage('AdsManager', 'CloseLoading');
         //unityInstance.SendMessage('AdsManager', 'TryToLoadCustomRewardVideo');
         FAPI.UI.showAd();
         unityInstance.SendMessage('AdsManager', 'GetReward');
       }
 
     } else if (method === "showLoadedAd") {
-      //unityInstance.SendMessage('AdsManager', 'CloseLoading');
+      unityInstance.SendMessage('AdsManager', 'CloseLoading');
       if (data === "complete") {
         unityInstance.SendMessage('AdsManager', 'GetReward');
       } else if (data === "not_prepared" || data === "mp4_not_supported") {
@@ -191,7 +191,7 @@
     function ShowOKInterstational() {
       if (adCounter > 3)
       {
-        //unityInstance.SendMessage('AdsManager', 'OpenLoading');
+        unityInstance.SendMessage('AdsManager', 'OpenLoading');
         FAPI.UI.showAd();
       } else {
         adCounter++;
@@ -199,7 +199,7 @@
     }
 
     function ShowOKRewardVideo() {
-      //unityInstance.SendMessage('AdsManager', 'OpenLoading');
+      unityInstance.SendMessage('AdsManager', 'OpenLoading');
       FAPI.UI.loadAd();
     }
 
