--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Build16.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Build17.json", {onProgress: UnityProgress});
     </script>
-
 
     <script type = "text/javascript" language = "javascript">
     var fullscreenID;
@@ -37,7 +36,7 @@
 
     var text;
     var link;
-    var adCounter = 0;
+    var adCounter = 1;
     </script>
 
     <!-- Yandex.RTB -->
@@ -98,6 +97,54 @@
     <script type = "text/javascript" language = "javascript">
 
 // Initialization
+    function CheckStats() {
+    }
+
+    function GetPlayerData(key) {
+      var callbackKeys = function(status, data, error) {
+        if (data) {
+          if (data.keys.length > 0) {
+            for (let i = 0; i <= data.keys.length; i++) {
+              if (i == data.keys.length) {
+                unityInstance.SendMessage('PlayerManager', 'GetPlayerDataFromPlayerPrefs', key);
+                break;
+              } else {
+                if (data.keys[i] == key) {
+
+                  var callback = function(status, data, error) {
+                    if (data) {
+                      if (typeof data.data[Object.keys(data.data)[0]] !== "undefined") {
+                        let reskey = key + "|" + data.data[Object.keys(data.data)[0]];
+                        unityInstance.SendMessage('PlayerManager', 'GetPlayerData', reskey);
+                      } else {
+                        unityInstance.SendMessage('PlayerManager', 'GetPlayerDataFromPlayerPrefs', key);
+                      }
+                    } else {
+                      console.log(error);
+                      unityInstance.SendMessage('PlayerManager', 'GetPlayerDataError', key);
+                    }
+                  };
+                  FAPI.Client.call({"method":"storage.get", "keys" : [key]}, callback);
+                  break;
+                }
+              }
+            }
+          } else {
+            unityInstance.SendMessage('PlayerManager', 'GetPlayerDataFromPlayerPrefs', key);
+          }
+        }
+      };
+      FAPI.Client.call({"method":"storage.getKeys"}, callbackKeys);
+    }
+
+    function SetPlayerData(key, data) {
+      FAPI.Client.call({"method":"storage.set", "key" : key, "value" : data});
+
+      let reskey = key + "|" + data;
+      unityInstance.SendMessage('PlayerManager', 'SetPlayerDataInPlayerPrefs', reskey);
+    }
+
+
     function VerticalInitialization() {
       unityInstance.SendMessage('PlatformManager', 'VerticalInitialization', 0);
     }
@@ -190,7 +237,7 @@
   }
 
     function ShowOKInterstational() {
-      if (adCounter > 3)
+      if (adCounter > 2)
       {
         unityInstance.SendMessage('AdsManager', 'OpenLoading');
         FAPI.UI.showAd();
@@ -348,65 +395,65 @@
       })
     }
 
-    // Full Screen
-        function ShowFullScreen() {
-          //document.getElementById('yandex_rtb_' + fullscreenID).style.display = 'block';
-          //Ya.Context.AdvManager.render({
-            //renderTo: 'yandex_rtb_' + fullscreenID,
-            //blockId: fullscreenID,
-            //onError: (data) => {
-              unityInstance.SendMessage('AdsManager', 'CloseFullScreen');
-            //},
-            //onRender: (data) => {
-              //unityInstance.SendMessage('AdsManager', 'FullScreenLoaded');
-            //}
-          //})
+// Full Screen
+    function ShowFullScreen() {
+      document.getElementById('yandex_rtb_' + fullscreenID).style.display = 'block';
+      Ya.Context.AdvManager.render({
+        renderTo: 'yandex_rtb_' + fullscreenID,
+        blockId: fullscreenID,
+        onError: (data) => {
+          unityInstance.SendMessage('AdsManager', 'CloseFullScreen');
+        },
+        onRender: (data) => {
+          unityInstance.SendMessage('AdsManager', 'FullScreenLoaded');
         }
+      })
+    }
 
-        function ShowMobileFullScreen() {
-          //document.getElementById('yandex_rtb_' + mobilefullscreenID).style.display = 'block';
-          //Ya.Context.AdvManager.render({
-            //renderTo: 'yandex_rtb_' + mobilefullscreenID,
-            //blockId: mobilefullscreenID,
-            //onError: (data) => {
-              unityInstance.SendMessage('AdsManager', 'CloseFullScreen');
-            //},
-            //onRender: (data) => {
-              //unityInstance.SendMessage('AdsManager', 'FullScreenLoaded');
-            //}
-          //})
+    function ShowMobileFullScreen() {
+      document.getElementById('yandex_rtb_' + mobilefullscreenID).style.display = 'block';
+      Ya.Context.AdvManager.render({
+        renderTo: 'yandex_rtb_' + mobilefullscreenID,
+        blockId: mobilefullscreenID,
+        onError: (data) => {
+          unityInstance.SendMessage('AdsManager', 'CloseFullScreen');
+        },
+        onRender: (data) => {
+          unityInstance.SendMessage('AdsManager', 'FullScreenLoaded');
         }
+      })
+    }
 
-        function CloseFullScreen() {
-          document.getElementById('yandex_rtb_' + fullscreenID).style.display = 'none';
-        }
+    function CloseFullScreen() {
+      document.getElementById('yandex_rtb_' + fullscreenID).style.display = 'none';
+    }
 
-        function CloseMobileFullScreen() {
-          document.getElementById('yandex_rtb_' + mobilefullscreenID).style.display = 'none';
-        }
+    function CloseMobileFullScreen() {
+      document.getElementById('yandex_rtb_' + mobilefullscreenID).style.display = 'none';
+    }
 
-    // Banner
-        function ShowBanner() {
-          //document.getElementById('yandex_rtb_' + horizontalbannerID).style.display = 'block';
-          //Ya.Context.AdvManager.render({
-            //renderTo: 'yandex_rtb_' + horizontalbannerID,
-            //blockId: horizontalbannerID,
-            //onError: (data) => {
-              unityInstance.SendMessage('AdsManager', 'CloseBanner');
-            //}
-          //})
+// Banner
+    function ShowBanner() {
+      document.getElementById('yandex_rtb_' + horizontalbannerID).style.display = 'block';
+      Ya.Context.AdvManager.render({
+        renderTo: 'yandex_rtb_' + horizontalbannerID,
+        blockId: horizontalbannerID,
+        onError: (data) => {
+          unityInstance.SendMessage('AdsManager', 'CloseBanner');
         }
+      })
+    }
 
-        function ShowMobileBanner() {
-          //document.getElementById('yandex_rtb_' + mobilebannerID).style.display = 'block';
-          //Ya.Context.AdvManager.render({
-            //renderTo: 'yandex_rtb_' + mobilebannerID,
-            //blockId: mobilebannerID,
-            //onError: (data) => {
-              unityInstance.SendMessage('AdsManager', 'CloseBanner');
-            //}
-          //})
+    function ShowMobileBanner() {
+      document.getElementById('yandex_rtb_' + mobilebannerID).style.display = 'block';
+      Ya.Context.AdvManager.render({
+        renderTo: 'yandex_rtb_' + mobilebannerID,
+        blockId: mobilebannerID,
+        onError: (data) => {
+          unityInstance.SendMessage('AdsManager', 'CloseBanner');
         }
+      })
+    }
 
     function CloseBanner() {
       document.getElementById('yandex_rtb_' + horizontalbannerID).style.display = 'none';
